# nexys4-player

./: Cargo.toml  LICENSE  README.md
assets/scenes/: load_scene_example.scn
examples/: button.rs  contributors.rs  event.rs  keyboard_event.rs  scene.rs  serial.rs  sprite.rs  sprite_sheet.rs  text.rs
report/: report.md  接口综合实验报告_U201816030_车春池.docx
src/: buttle.rs  config.rs  enemy.rs  main.rs  main_snake.rs  manager.rs  player.rs  serial.rs  util.rs
