[package]
name = "nexys4-player"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = { path = "../serialport-rs" }
conrod = { version = "0.52.0", features = ["piston", "glium", "winit"] }