[package]
name = "nexys4-player"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = { path = "../serialport-rs" }
bevy = "0.4.0"
rand = "0.7.3"
lazy_static = "1.4.0"

[profile.dev]
# opt-level = 1               # Use slightly better optimizations.
# overflow-checks = false     # Disable integer overflow checks.